--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.29.1",
+    "sweetalert2": "^11.22.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
