Oda ekleme ve düzenleme eklendi.

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=pansiyon;Username=postgres;Password=root"
+    "DefaultConnection": "Host=localhost;Database=pansiyon;Username=postgres;Password=burak155"
   },
   "JwtSettings": {
     "SecretKey": "PansiyonYonetimSistemi_SuperSecretKey_2024_GunesPansiyon_JWT_Token_Security",
