Ayarlar- Şifre Değiştirme - Cookie - Session Revize.

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,12 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=pansiyon;Username=postgres;Password=burak155"
+    "DefaultConnection": "Host=localhost;Database=pansiyon;Username=postgres;Password=root"
   },
   "JwtSettings": {
     "SecretKey": "PansiyonYonetimSistemi_SuperSecretKey_2024_GunesPansiyon_JWT_Token_Security",
     "Issuer": "PansiyonYonetimSistemi",
     "Audience": "PansiyonYonetimSistemi_Users",
-    "ExpiryInMinutes": 60
+    "ExpiryInMinutes": 43200
   },
   "Logging": {
     "LogLevel": {
